final_project/scripts/ssl_deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresswordpress
  namespace: prod-env
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: wordpresstony.sandbox.aws.teamwork.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
              service:
                name: wordpress
                port:
                  number: 80
   
  tls:
  - hosts:
    - wordpresstony.sandbox.aws.teamwork.net
    secretName: tonysecret
